# clima-track

./: .dockerignore  .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  entrypoint.sh  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_01_1145-5524baaa22c3_create_cities_table.py  2025_10_01_1148-827d84611f79_create_temperatures_table.py  2025_10_01_1436-549413f4c8ff_migrate_table_to_postgres.py
app/auth/: dependencies.py
app/celery/: celery_app.py
app/celery/tasks/: __init__.py  task_temperature_search.py
app/config/: __init__.py  config.py  logger.py
app/models/: __init__.py  base.py  city.py  temperature.py
app/repositories/: __init__.py  base.py  city.py  temperature.py
app/routers/: __init__.py  dependencies.py  temperatures.py
app/schemas/: city.py  temperature.py
app/services/: weather.py  weather_api.py
app/utils/: __init__.py  convert_date.py
services/: weather_api.py
